--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fotogria, especializado en New Born en Tandil. retratando momentos inolvidables">
     <!--fond Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <!--Css-->
@@ -23,8 +24,8 @@
 
 <body>
     <nav class="navbar navbar-expand-sm navbar-light">
-        <div class="container-fluid fluid1">
-            <a href="index.html" class="navbar-brand"><img src="imagenes/LOGOCALMA.jpg" alt="Logo" class="imgLogo"></a>
+        <div class="container-fluid">
+            <a href="index.html" class="navbar-brand"><img src="Imagenes/LOGOCALMA.png" alt="Logo" class="imgLogo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="menuham-container"><img src="imagenes/mhambu.png" alt="Logo" class="menuham"></div>
@@ -33,19 +34,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+                        <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Galeria.html">Galeria</a>
+                        <a class="nav-link" href="./otra/Galeria.html">Galeria</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Conocenos.html">Conocenos</a>
+                        <a class="nav-link" href="./otra/Conocenos.html">Conocenos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Contacto.html">Contacto</a>
+                        <a class="nav-link" href="./otra/Contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Precio.html">Precio</a>
+                        <a class="nav-link" href="./otra/Precio.html">Precio</a>
                     </li>
                 </ul>
             </div>
@@ -55,10 +56,10 @@
     <main class="contGaleria">
         <section>
             <div class="galeria">
-                <a href="Galeria.html"><img src="Imagenes/1.jpg"></a>
-                <a href="Galeria.html"><img src="Imagenes/2.jpg"></a>
-                <a href="Galeria.html"><img src="Imagenes/3.jpg"></a>
-                <a href="Galeria.html"><img src="Imagenes/4.jpg"></a>
+                <a href="Galeria.html"><img src="Imagenes/1.png"></a>
+                <a href="Galeria.html"><img src="Imagenes/2.png"></a>
+                <a href="Galeria.html"><img src="Imagenes/3.png"></a>
+                <a href="Galeria.html"><img src="Imagenes/4.png"></a>
             </div>
         </section>
     </main>
@@ -107,9 +108,9 @@
     <!--Parte 4-->
     <section class="imagFondo">
         <div class="fotoFondo">
-            <img src="imagenes/mellis.jpg">
-            <img src="imagenes/panza.jpg">
-            <img src="imagenes/hijanoe.jpg">
+            <img src="Imagenes/mellis.png">
+            <img src="Imagenes/panza.png">
+            <img src="Imagenes/hijanoe.png">
         </div>
     </section>
 
