--- a/otra/Conocenos.html
+++ b/otra/Conocenos.html
@@ -5,18 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conocenos</title>
+    <meta name="description" content="Descripcion de Calma fotografia new born Tandil">
+    <title>Conocenos Calma Fotografia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-    <link rel="stylesheet" href="Css/estilo.css">
+    <link rel="stylesheet" href="../Css/estilo.css">
 </head>
 
 <body>
 
     <nav class="navbar navbar-expand-sm navbar-light">
-        <div class="container-fluid fluid1">
-            <a href="index.html" class="navbar-brand"><img src="imagenes/LOGOCALMA.jpg" alt="Logo" class="imgLogo"></a>
+        <div class="container-fluid">
+            <a href="index.html" class="navbar-brand"><img src="../Imagenes/LOGOCALMA.png" alt="Logo" class="imgLogo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="menuham-container"><img src="imagenes/mhambu.png" alt="Logo" class="menuham"></div>
@@ -25,19 +26,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Galeria.html">Galeria</a>
+                        <a class="nav-link" href="./Galeria.html">Galeria</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Conocenos.html">Conocenos</a>
+                        <a class="nav-link" href="./Conocenos.html">Conocenos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Contacto.html">Contacto</a>
+                        <a class="nav-link" href="./Contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Precio.html">Precio</a>
+                        <a class="nav-link" href="./Precio.html">Precio</a>
                     </li>
                 </ul>
             </div>
@@ -46,7 +47,7 @@
 
     <h2>Nosotros</h2>
     <div class="fluid2">
-        <p > Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam est labore ratione laborum cumque
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam est labore ratione laborum cumque
             praesentium ducimus, minus nostrum veniam! Aspernatur non ratione dolore id eligendi autem, ea
             laboriosam minima. Earum error tempore nihil incidunt sunt dolor esse? Quibusdam ipsa alias molestiae
             laborum nobis quaerat cumque reiciendis iusto provident voluptates tempora nihil, accusantium quia fugit
