--- a/otra/Contacto.html
+++ b/otra/Contacto.html
@@ -5,19 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contacto</title>
+  <meta name="description" content="Conacto con Calma fotografica Tandil new born ">
+  <title>Contacto Calma Fotografia</title>
   <!--fond Awesome-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-  <link rel="stylesheet" href="Css/estilo.css">
+  <link rel="stylesheet" href="../Css/estilo.css">
 </head>
 
 <body>
 
   <nav class="navbar navbar-expand-sm navbar-light ">
     <div class="container-fluid fluid1">
-      <a href="index.html" class="navbar-brand"><img src="imagenes/LOGOCALMA.jpg" alt="Logo" class="imgLogo"></a>
+      <a href="index.html" class="navbar-brand"><img src="../Imagenes/LOGOCALMA.png" alt="Logo" class="imgLogo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <div class="menuham-container"><img src="imagenes/mhambu.png" alt="Logo" class="menuham"></div>
@@ -26,19 +27,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Galeria.html">Galeria</a>
+            <a class="nav-link" href="./Galeria.html">Galeria</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Conocenos.html">Conocenos</a>
+            <a class="nav-link" href="./Conocenos.html">Conocenos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Contacto.html">Contacto</a>
+            <a class="nav-link" href="./Contacto.html">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Precio.html">Precio</a>
+            <a class="nav-link" href="./Precio.html">Precio</a>
           </li>
         </ul>
       </div>
