--- a/otra/Galeria.html
+++ b/otra/Galeria.html
@@ -5,19 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Galeria de fotos Calma new born Tandil">
   <title>Galeria</title>
   <!--fond Awesome-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-  <link rel="stylesheet" href="Css/estilo.css">
+  <link rel="stylesheet" href="../Css/estilo.css">
 </head>
 
 <body>
 
-<nav class="navbar navbar-expand-sm navbar-light ">
-    <div class="container-fluid fluid1">
-      <a href="index.html" class="navbar-brand"><img src="imagenes/LOGOCALMA.jpg" alt="Logo" class="imgLogo"></a>
+  <nav class="navbar navbar-expand-sm navbar-light ">
+    <div class="container-fluid">
+      <a href="index.html" class="navbar-brand"><img src="../Imagenes/LOGOCALMA.png" alt="Logo" class="imgLogo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <div class="menuham-container"><img src="imagenes/mhambu.png" alt="Logo" class="menuham"></div>
@@ -25,19 +26,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Galeria.html">Galeria</a>
+            <a class="nav-link" href="./Galeria.html">Galeria</a>
+          </li>
+          <li class="nav-item"></li>
+            <a class="nav-link" href="./Conocenos.html">Conocenos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Conocenos.html">Conocenos</a>
+            <a class="nav-link" href="./Contacto.html">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Contacto.html">Contacto</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Precio.html">Precio</a>
+            <a class="nav-link" href="./Precio.html">Precio</a>
           </li>
         </ul>
       </div>
@@ -49,19 +50,19 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="Imagenes/berna3.jpg" class="d-block w-75" alt="...">
+          <img src="../Imagenes/berna3.png" class="d-block w-75" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="Imagenes/berna4.jpg" class="d-block w-75" alt="...">
+          <img src="../Imagenes/berna4.png" class="d-block w-75" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="Imagenes/berna2.jpg" class="d-block w-75" alt="...">
+          <img src="../Imagenes/berna2.png" class="d-block w-75" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="Imagenes/4.jpg" class=" d-block w-75" alt="...">
+          <img src="../Imagenes/4.png" class=" d-block w-75" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="Imagenes/berna1.jpg" class="d-block w-75" alt="...">
+          <img src="../Imagenes/berna1.png" class="d-block w-75" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -77,13 +78,13 @@
     <div id="carouselExampleFade2" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="Imagenes/almen3.jpg" class="d-block w-75" alt="...">
+          <img src="../Imagenes/almen3.png" class="d-block w-75" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="Imagenes/alemn2.jpg" class="d-block w-75" alt="...">
+          <img src="../Imagenes/alemn2.png" class="d-block w-75" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="Imagenes/almen1.jpg" class="d-block w-75" alt="...">
+          <img src="../Imagenes/almen1.png" class="d-block w-75" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade2" data-bs-slide="prev">
@@ -99,13 +100,13 @@
     <div id="carouselExampleFade3" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="Imagenes/pepa3.jpg" class="d-block w-75" alt="...">
+          <img src="../Imagenes/pepa3.png" class="d-block w-75" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="Imagenes/pepa2.jpg" class="d-block w-75" alt="...">
+          <img src="../Imagenes/pepa2.png" class="d-block w-75" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="Imagenes/pepa1.jpg" class="d-block w-75" alt="...">
+          <img src="../Imagenes/pepa1.png" class="d-block w-75" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade3" data-bs-slide="prev">
