--- a/otra/Galeria.html
+++ b/otra/Galeria.html
@@ -21,27 +21,27 @@
       <a href="index.html" class="navbar-brand"><img src="../Imagenes/LOGOCALMA.png" alt="Logo" class="imgLogo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <div class="menuham-container"><img src="imagenes/mhambu.png" alt="Logo" class="menuham"></div>
+        <div class="menuham-container"><img src="../Imagenes/mhambu.png" alt="Logo" class="menuham"></div>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./Galeria.html">Galeria</a>
-          </li>
-          <li class="nav-item"></li>
-            <a class="nav-link" href="./Conocenos.html">Conocenos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./Contacto.html">Contacto</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./Precio.html">Precio</a>
-          </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./Galeria.html">Galeria</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./Conocenos.html">Conocenos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./Contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./Precio.html">Precio</a>
+            </li>
         </ul>
-      </div>
+    </div>
     </div>
   </nav>
   <div class="container-fluid">
